# tree_visualization

./: .gitignore  README.md  dune-project  index.html  memo.md  package-lock.json  package.json  vite.config.ts
lib/: ds.ml  tree_visual.ml
ocaml/: .gitignore  dune-project  tree_visual.opam
ocaml/lib/: ds_stack.ml  dune
ocaml/lib/data_structure/: data_structure.ml  dune
ocaml/lib/tree_visual/: create_tree.ml  ds_queue.ml  dune  traverse_tree.ml  tree_def.ml  tree_visual.ml
ocaml/lib/tree_visual_/: ds_queue.ml  ds_stack.ml  dune  test_func.ml  tree_visual_.ml
ocaml/test/: data.expected  dune  test.ml
src/: App.svelte  app.css  main.ts  mainjs.bc.js
src/comp/: DescLink.svelte  ResizableHeight.svelte  WrapRange.svelte  WrapTextarea.svelte
src/lib/: Controls.svelte  Description.svelte  DrawTree.svelte  WrapRange.svelte  makeAdjacent.ts  service.ts
src/tests/: makeAdjacent.test.ts  sum.test.ts
test/: dune
